Improved Java syntax